@@ -83,6 +83,10 @@ Other Changes
   Closes #5283
   Closes #1887
 
+* Fixed failure to enable ``deprecated-module`` after a ``disable=all``
+  by making ``ImportsChecker`` solely responsible for emitting ``deprecated-module`` instead
+  of sharing responsibility with ``StdlibChecker``. (This could have led to double messages.)
+
 * The ``config`` attribute of ``BaseChecker`` has been deprecated. You can use ``checker.linter.config``
   to access the global configuration object instead of a checker-specific object.
 
