@@ -9,6 +9,7 @@ from __future__ import annotations
 import collections
 import copy
 import os
+import sys
 from typing import TYPE_CHECKING, Any
 
 import astroid
@@ -30,6 +31,19 @@ from pylint.utils import IsortDriver
 
 if TYPE_CHECKING:
     from pylint.lint import PyLinter
+
+
+DEPRECATED_MODULES = {
+    (0, 0, 0): {"tkinter.tix", "fpectl"},
+    (3, 2, 0): {"optparse"},
+    (3, 3, 0): {"xml.etree.cElementTree"},
+    (3, 4, 0): {"imp"},
+    (3, 5, 0): {"formatter"},
+    (3, 6, 0): {"asynchat", "asyncore"},
+    (3, 7, 0): {"macpath"},
+    (3, 9, 0): {"lib2to3", "parser", "symbol", "binhex"},
+    (3, 10, 0): {"distutils"},
+}
 
 
 def _qualified_names(modname):
@@ -415,9 +429,15 @@ class ImportsChecker(DeprecatedMixin, BaseChecker):
             for cycle in get_cycles(graph, vertices=vertices):
                 self.add_message("cyclic-import", args=" -> ".join(cycle))
 
-    def deprecated_modules(self):
+    def deprecated_modules(self) -> set[str]:
         """Callback returning the deprecated modules."""
-        return self.linter.config.deprecated_modules
+        # First get the modules the user indicated
+        all_deprecated_modules = set(self.linter.config.deprecated_modules)
+        # Now get the hard-coded ones from the stdlib
+        for since_vers, mod_set in DEPRECATED_MODULES.items():
+            if since_vers <= sys.version_info:
+                all_deprecated_modules = all_deprecated_modules.union(mod_set)
+        return all_deprecated_modules
 
     def visit_import(self, node: nodes.Import) -> None:
         """Triggered when an import statement is seen."""
@@ -448,10 +468,11 @@ class ImportsChecker(DeprecatedMixin, BaseChecker):
         """Triggered when a from statement is seen."""
         basename = node.modname
         imported_module = self._get_imported_module(node, basename)
+        absolute_name = get_import_name(node, basename)
 
         self._check_import_as_rename(node)
         self._check_misplaced_future(node)
-        self.check_deprecated_module(node, basename)
+        self.check_deprecated_module(node, absolute_name)
         self._check_preferred_module(node, basename)
         self._check_wildcard_imports(node, imported_module)
         self._check_same_line_imports(node)
