@@ -1,2 +1,0 @@
-[testoptions]
-exclude_from_minimal_messages_config=true
