@@ -3,4 +3,3 @@ py-version=3.8
 
 [testoptions]
 min_pyver=3.9
-exclude_from_minimal_messages_config=true
