@@ -1,0 +1,3 @@
+"""This deprecated stdlib module is redundantly given by the user in the config."""
+# pylint: disable-next=unused-import
+import imp  # [deprecated-module]
