@@ -1,0 +1,2 @@
+[Imports]
+deprecated-modules=imp
