@@ -26,6 +26,10 @@ Release date: TBA
 
   Closes #5224
 
+* Fixed failure to enable ``deprecated-module`` after a ``disable=all``
+  by making ``ImportsChecker`` solely responsible for emitting ``deprecated-module`` instead
+  of sharing responsibility with ``StdlibChecker``. (This could have led to double messages.)
+
 * The ``no-init`` (W0232) warning has been removed. It's ok to not have an ``__init__`` in a class.
 
   Closes #2409
